--- a/manifest.json
+++ b/manifest.json
@@ -4,45 +4,45 @@
   "description": "Premier healthcare education institution offering GNM, BSc Nursing, and Paramedical courses. Established 1988.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#003087",
-  "theme_color": "#003087",
+  "background_color": "#ffffff",
+  "theme_color": "#1e40af",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en",
   "categories": ["education", "healthcare", "medical"],
   "icons": [
     {
-      "src": "images/ANC_logo.png",
+      "src": "images/Logo4.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "images/ANC_logo.png",
+      "src": "images/Logo4.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "images/ANC_logo.png",
+      "src": "images/Logo4.png",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "images/ANC_logo.png",
+      "src": "images/Logo4.png",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "images/ANC_logo.png",
+      "src": "images/Logo4.png",
       "sizes": "72x72",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "images/ANC_logo.png",
+      "src": "images/Logo4.png",
       "sizes": "48x48",
       "type": "image/png",
       "purpose": "any"
@@ -50,7 +50,7 @@
   ],
   "screenshots": [
     {
-      "src": "images/ANC_logo.png",
+      "src": "images/Logo4.png",
       "sizes": "1280x720",
       "type": "image/png",
       "form_factor": "wide"
