--- a/applications.json
+++ b/applications.json
@@ -98,5 +98,15 @@
     "message": "",
     "timestamp": "2025-06-15T16:08:46.389353",
     "status": "pending"
+  },
+  {
+    "_id": "09493644464",
+    "name": "Raghunath Kunigiri",
+    "email": "Bharath@gmail.com",
+    "phone": "09493644464",
+    "course": "Medical Lab Technician",
+    "message": "",
+    "timestamp": "2025-06-15T19:49:20.783333",
+    "status": "pending"
   }
 ]
